samples/_failures_safe/1761519600_a1b0e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_018d73dd.c: In function ‘main’:
./samples/SAFE/__tmp_018d73dd.c:153:12: error: missing terminating " character
  153 |     printf("\nMatrix Addition:\
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_018d73dd.c:153:5: error: expected expression at end of input
  153 |     printf("\nMatrix Addition:\
      |     ^~~~~~
./samples/SAFE/__tmp_018d73dd.c:153:5: error: expected declaration or statement at end of input
